--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.14.2",
+    "lucide-react": "^0.548.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
@@ -31,6 +38,11 @@
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "timers": "^0.1.1",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "browserslist": {
